omni/tests/goldens/types/unknown_type_04.err
tests/goldens/types/unknown_type_04.omni:1:12: error: unknown type "Mystery4"
  let value4:Mystery4 = 1
             ~~~~~~~~ hint: import or declare the type before use
tests/goldens/types/unknown_type_04.omni:1:1: error: cannot assign int to Mystery4
  let value4:Mystery4 = 1
  ~~~~~~~~~~~~~~~~~~~~~~~ hint: convert the expression to Mystery4 or change the variable type to int
