omni/tests/goldens/types/unknown_type_04.omni
let value4:Mystery4 = 1
